--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 
             <h4>SVG</h4>
             <p>
-                <a class="btn btn-lg btn-" href="/svg/circles.xml">Смотреть</a>
+                <a class="btn btn-lg btn-info" href="/svg/circles.xml">Смотреть</a>
             </p>
          </div>
       </div>
